# gpt-4-auto-gen-go-py-rust

./: .gitignore
gpt-4-auto-gen-go/: README.md  go.mod  go.sum  handlers.go  main.go  models.go
gpt-4-auto-gen-python/: config.py  crud.py  database.py  main.py  models.py  requirements.txt  schemas.py
gpt-4-auto-gen-python/test/: test_main.py
gpt-4-auto-gen-rust/trade-micro-service-gpt-4-rust/: Cargo.toml  README.md
gpt-4-auto-gen-rust/trade-micro-service-gpt-4-rust/src/: db.rs  handlers.rs  main.rs
gpt-4-auto-gen-rust/trade-micro-service-gpt-4-rust/tests/: test.rs
