[package]
name = "trademicroservice"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.8"
actix-rt = "2.2.0"
tokio-postgres = "0.7"
postgres-types = "0.2"
chrono = { version = "0.4.24", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
